--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
-}
 
+}
+apply plugin: 'com.google.gms.google-services'
 android {
     namespace 'com.example.ecommerceapp'
     compileSdk 32
