--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,17 @@ buildscript {
         mavenCentral()  // Maven Central repository
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.13'
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
 
 
